Bug 353959 - Can not enter uppercased first letter
Summary: Can not enter uppercased first letter
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.4.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
: 360050 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-16 11:10 UTC by cotkocot
Modified: 2016-03-04 20:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cotkocot 2015-10-16 11:10:23 UTC
Although it doesn't really impact anything, I found out that you can not enter upper cased string into krunner, every time you start typing first letter is lower cased, no matter if I'm using shift or caps lock.

Reproducible: Always

Steps to Reproduce:
1. Open krunner
2. Hold down shift or turn on caps lock and type anything


Actual Results:  
First letter is always lower cased

Expected Results:  
Expected first letter to be upper case (as is the rest of the query string)
Comment 1 cotkocot 2015-10-16 11:15:47 UTC
(In reply to cotkocot from comment #0)
> Although it doesn't really impact anything, I found out that you can not
> enter upper cased string into krunner, every time you start typing first
> letter is lower cased, no matter if I'm using shift or caps lock.
> 
> Reproducible: Always
> 
> Steps to Reproduce:
> 1. Open krunner
> 2. Hold down shift or turn on caps lock and type anything
> 
> 
> Actual Results:  
> First letter is always lower cased
> 
> Expected Results:  
> Expected first letter to be upper case (as is the rest of the query string)

EDIT: actually I think this is at least of normal importance, in case you have any runnable script/command which for some reason is upper cased you could get annoyed when trying to execute it via krunner.
Comment 2 sombragris 2015-10-16 19:23:28 UTC
I can confirm this in krunner 5.15.0 under Slackware64-current. Very annoying and inconvenient. A fix will be greatly appreciated. Thank you!
Comment 3 sombragris 2015-10-16 19:23:36 UTC
I can confirm this in krunner 5.15.0 under Slackware64-current. Very annoying and inconvenient. A fix will be greatly appreciated. Thank you!
Comment 4 Akarsh Simha 2015-11-23 00:43:00 UTC
I can confirm this in KRunner 5.16.0 under ArchLinux.

The reason I believe this should be fixed is because I should be able to perform case-sensitive searches. It turns out that I'm usually looking for a document named XyZ. But string Xyz and xyz are present in multiple other documents indexed by baloo. This results in XyZ being buried away to the point of not being shown in the results, despite me using the correct case to try and fish it out of the pile.

(Also, I feel that file name matches must be prioritized over full-text indexed matches when it comes to searching documents; will report as a separate bug)
Comment 5 Bob K 2015-11-24 09:49:42 UTC
Yup, it happens here too. Subscribe kubuntu 15.10.
I have my own special scripts (150+) that starts with uppercase "S" and yes this is a bit annoying, please fix once.

Thanks!
Comment 6 Kai Uwe Broulik 2016-02-06 10:27:22 UTC
Git commit d7c5c99ad05c891e37febd080404173279c718d8 by Kai Uwe Broulik.
Committed on 06/02/2016 at 10:26.
Pushed by broulik into branch 'master'.

[DesktopView] Allow Shift modifier for triggering KRunner

We were rejecting all key presses that had modifier in it, this included upper-case letters because of Shift being pressed.

Accept keys where *only* the Shift modifier is pressed, too.
FIXED-IN: 5.6.0

Differential Revision: https://phabricator.kde.org/D902

M  +1    -1    shell/desktopview.cpp

http://commits.kde.org/plasma-workspace/d7c5c99ad05c891e37febd080404173279c718d8
Comment 7 Kai Uwe Broulik 2016-03-04 20:10:35 UTC
*** Bug 360050 has been marked as a duplicate of this bug. ***