[DesktopView] Allow Shift modifier for triggering KRunner

We were rejecting all key presses that had modifier in it, this included upper-case letters because of Shift being pressed.

Accept keys where *only* the Shift modifier is pressed, too.

BUG: 353959
FIXED-IN: 5.6.0

Differential Revision: https://phabricator.kde.org/D902